force-app/main/default/objects/sugati__Room__c/sugati__Room__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Room ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>