force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Allow_Mixed_Gender_with_no_prompt__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Allow_Mixed_Gender_with_no_prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Mixed Gender with no prompt</label>
    <type>Checkbox</type>
</CustomField>