force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Is_Connected__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Is_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Connected</label>
    <type>Checkbox</type>
</CustomField>