force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Next_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Next_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next To</label>
    <type>Checkbox</type>
</CustomField>