force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Opposite_to__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Opposite_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opposite to?</label>
    <type>Checkbox</type>
</CustomField>