force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Related_to_Room__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Related_to_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by Tin</description>
    <label>Related to Room</label>
    <referenceTo>sugati__Room__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>