force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Room_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Room_No__c</fullName>
    <label>Room No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>