force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Room_Type__c</fullName>
    <label>Room Type</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>