force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Shareable__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Shareable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this room shareable?</description>
    <label>Shareable ?</label>
    <type>Checkbox</type>
</CustomField>