force-app/main/default/objects/sugati__Room__c/fields/sugati__R_Sleep_Max__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Sleep_Max__c</fullName>
    <label>Sleep Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>