force-app/main/default/objects/sugati__Room__c/fields/sugati__S_R_Is_Cabin__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Is_Cabin__c</fullName>
    <formula>sugati__R_Room_Type__r.sugati__S_RT_Is_Cabin__c</formula>
    <label>Is Cabin?</label>
    <type>Checkbox</type>
</CustomField>