force-app/main/default/objects/sugati__Room__c/fields/sugati__S_R_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Room_Name__c</fullName>
    <inlineHelpText>Name of the room which will be used on the UI level.</inlineHelpText>
    <label>Room Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>